FE - styling fixes for scrollbar and create user modal

--- a/react-app/src/app/components/modals/CreateUserModal.css
+++ b/react-app/src/app/components/modals/CreateUserModal.css
@@ -10,7 +10,6 @@
     padding-left: 40%;
     padding-right: 40%;
     margin-top: 45px;
-    padding-top: 30px;
     background: rgb(134, 160, 169);
 }
 
